--- a/config/config_mcs_tbpf_scream_healpix9.yml
+++ b/config/config_mcs_tbpf_scream_healpix9.yml
@@ -1,4 +1,5 @@
----
+# mbaidu edited PyFLEXTRKR script---
+
 # HEALPix MCS tracking configuration file
 # Tracking uses collocated Tb + Precipitation
 
