Fix order of operations in get_composite_reflectivity_generic to match original functions
- Require radar location variable names (radar_lon_varname, radar_lat_varname, radar_alt_varname) in the config read them from input data
- Move reflectivity reading after AGL to MSL height transformation to ensure correct coordinate values
- Add round_time_to_second config parameter (default: False) for conditional time rounding
- Update config files with new coordinate parameter names (x/y/z_coordname, lon/lat_coordname)
- Add z_coord_type parameter to explicitly specify vertical coordinate type

Tested and verified:
- config_csapr500m_example.yml: reproduces original results
- config_nexrad500m_example.yml: reproduces original results

--- a/config/config_nexrad500m_example.yml
+++ b/config/config_nexrad500m_example.yml
@@ -113,14 +113,22 @@ y_dimname: 'y'
 z_dimname: 'z'
 time_dimname: 'time'
 time_coordname: 'time'
-x_varname: 'x'
-y_varname: 'y'
-z_varname: 'z'
-lon_varname: 'point_longitude'
-lat_varname: 'point_latitude'
+x_coordname: 'x'
+y_coordname: 'y'
+z_coordname: 'z'
+lon_coordname: 'point_longitude'
+lat_coordname: 'point_latitude'
+# Radar location variables produced by PyART gridding
+radar_lon_varname: 'origin_longitude'
+radar_lat_varname: 'origin_latitude'
+radar_alt_varname: 'alt'
+# Radar reflectivity variable name used for cell identification
 reflectivity_varname: 'reflectivity'
 # Input data source: 'radar', 'wrf', 'wrf_regrid'
 input_source: 'radar'
+# The vertical coordinate type - 'pressure' or 'height'
+# If omitted, will auto-detect based on whether coordinate is increasing/decreasing
+z_coord_type: 'height'
 
 # Specify data structure
 datatimeresolution: 0.0833     # hours
