Fix 2D composite reflectivity handling in generic function
- Read reflectivity directly from dataset for 2D case instead of using undefined 'dbz' variable
- Update config_saag_wrf4km_goamazon.yml to use coordname parameters (x_coordname, y_coordname, lon_coordname, lat_coordname)
- Tested with WRF composite reflectivity data (input_source='wrf_composite')

--- a/config/config_saag_wrf4km_goamazon.yml
+++ b/config/config_saag_wrf4km_goamazon.yml
@@ -136,8 +136,10 @@ dy: 4000  # meter
 x_dimname: "lon"
 y_dimname: "lat"
 z_dimname: "z"
-x_varname: "longitude"
-y_varname: "latitude"
+x_coordname: "longitude"
+y_coordname: "latitude"
+lon_coordname: "longitude"
+lat_coordname: "latitude"
 reflectivity_varname: 'REFL_COM'
 # Input data source: 'radar', 'wrf'
 input_source: 'wrf_composite'
