Unify echo-top height function and add auto-detection of 2D/3D data
Major improvements:
- Merged echotop_height() and echotop_height_wrf() into single unified function
  that automatically detects 1D vs 3D height arrays
- Added auto-detection of 2D vs 3D reflectivity data via is_3d flag
- Echo-top height calculations now automatically skipped for 2D data
- Eliminated need for input_source parameter in config files

Technical changes:
- echotop_height() now checks height.ndim to handle both 1D and 3D cases
- echotop_height_wrf() kept as deprecated wrapper for backward compatibility
- get_composite_reflectivity_generic() returns is_3d flag in output dictionary
- idcells_reflectivity() uses is_3d flag instead of input_source to control
  echo-top height calculations
- Added informational message when deprecated input_source is still specified

Updated config examples to comment out input_source:
- config_csapr4km_example.yml
- config_csapr500m_example.yml
- config_nexrad500m_example.yml
- config_saag_wrf4km_cacti.yml
- config_saag_wrf4km_goamazon.yml
- config_sipam4km_example.yml

--- a/config/config_saag_wrf4km_goamazon.yml
+++ b/config/config_saag_wrf4km_goamazon.yml
@@ -141,8 +141,8 @@ y_coordname: "latitude"
 lon_coordname: "longitude"
 lat_coordname: "latitude"
 reflectivity_varname: 'REFL_COM'
-# Input data source: 'radar', 'wrf'
-input_source: 'wrf_composite'
+# Input data source: No longer needed!
+# input_source: 'wrf_composite'
 
 # Specify data structure
 datatimeresolution: 0.25     # hour
