--- a/config/config_csapr4km_example.yml
+++ b/config/config_csapr4km_example.yml
@@ -160,8 +160,8 @@ radar_lat_varname: 'origin_latitude'
 radar_alt_varname: 'alt'
 # Radar reflectivity variable name used for cell identification
 reflectivity_varname: 'taranis_attenuation_corrected_reflectivity'
-# Input data source: 'radar', 'wrf', 'wrf_regrid'
-input_source: 'csapr_cacti'
+# Input data source: No longer needed!
+# input_source: 'csapr_cacti'
 # The vertical coordinate type - 'pressure' or 'height'
 # If omitted, will auto-detect based on whether coordinate is increasing/decreasing
 z_coord_type: 'height'
