--- a/config/config_saag_wrf4km_cacti.yml
+++ b/config/config_saag_wrf4km_cacti.yml
@@ -141,8 +141,8 @@ z_dimname: "z"
 x_varname: "longitude"
 y_varname: "latitude"
 reflectivity_varname: 'REFL_COM'
-# Input data source: 'radar', 'wrf'
-input_source: 'wrf_composite'
+# Input data source: No longer needed!
+# input_source: 'wrf_composite'
 
 # Specify data structure
 datatimeresolution: 0.25     # hour
