--- a/config/config_saag_wrf4km_goamazon.yml
+++ b/config/config_saag_wrf4km_goamazon.yml
@@ -18,7 +18,7 @@ run_mapfeature: True
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
 nprocesses: 128  # Number of processors to use if run_parallel=1
-dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
+dask_tmp_dir: /tmp  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
 # Start/end date and time
@@ -29,39 +29,39 @@ enddate: '20140401.0000'
 # This is only used to identify the files within the tracking period
 # E.g., databasename20181101.011503.nc --> yyyymodd.hhmmss
 # E.g., databasename2018-11-01_01:15:00 --> yyyy-mo-dd_hh:mm:ss
-time_format: 'yyyy-mo-dd_hh:mm:ss'
-databasename: 'refl_'
+time_format: yyyy-mo-dd_hh:mm:ss
+databasename: refl_
 
 # WRF raw data
-wrfout_path: '/pscratch/sd/f/feng045/SAAG/hist/auxhist/refl/goamazon/'
-wrfout_basename: 'refl_'
+wrfout_path: /pscratch/sd/f/feng045/SAAG/hist/auxhist/refl/goamazon/
+wrfout_basename: refl_
 # Input files directory
-clouddata_path: '/pscratch/sd/f/feng045/SAAG/hist/auxhist/refl/goamazon/'
+clouddata_path: /pscratch/sd/f/feng045/SAAG/hist/auxhist/refl/goamazon/
 # Working directory for the tracking data
-root_path: '/pscratch/sd/f/feng045/SAAG/hist/cell_tracking/goamazon/'
+root_path: /pscratch/sd/f/feng045/SAAG/hist/cell_tracking/goamazon/
 # Working sub-directory names
-tracking_path_name: 'tracking'
-stats_path_name: 'stats'
-pixel_path_name: 'celltracking'
+tracking_path_name: tracking
+stats_path_name: stats
+pixel_path_name: celltracking
 
 # Terrain file
 # terrain_file: ''
 # Range mask variable (for compatibility purpose with radar data only)
-rangemask_varname: 'mask110'
+rangemask_varname: mask110
 
 # Specify types of feature being tracked
 # This adds additional feature-specific statistics to be computed
-feature_type: 'radar_cells'
+feature_type: radar_cells
 
 # Advection calculation parameters
 advection_field_threshold: 10    # radar reflectivity threshold [dBZ]
 advection_med_filt_len: 9         # median filter length for advection speed time seires [number of points]
 advection_max_movement_mps: 60    # maximum advection speed allowed [m/s]
-advection_mask_method: 'greater'  # masking method
+advection_mask_method: greater  # masking method
 advection_buffer: 6  # number of grid points around the edge of domain to buffer
 advection_size_threshold: 10  # number of min valid points to calculate advection
 advection_tiles: [1,1]   # number of tiles to calculate advection [y,x]
-advection_filename: 'advection_'
+advection_filename: advection_
 # Subset boundary [lat_min, lon_min, lat_max, lon_max]
 # geolimits: [-5.3, -62.2, -1.0, -57.8]
 
@@ -104,8 +104,8 @@ maxConvRadius: 8.0  # option6
 conv_rad_increment: 0.75  # option6
 # Background reflectivity step-function increment [dB]
 bkg_refl_increment: 5
-# Convolution method to calculate background reflectivity: 'ndimage' (default), 'signal' (FFT)
-convolve_method: 'ndimage'
+# Convolution method to calculate background reflectivity: ndimage (default), signal (FFT)
+convolve_method: ndimage
 # Define a set of radii for final step of convective cell expansion [km]
 # This is for the purpose of making the convective region larger for tracking convective cells
 radii_expand: [1,2,3,4,5,6,7,8]
@@ -133,22 +133,22 @@ return_diag: True
 # Radar file data dimensions and reflectivity variable name
 dx: 4000  # meter
 dy: 4000  # meter
-x_dimname: "lon"
-y_dimname: "lat"
-z_dimname: "z"
-x_coordname: "longitude"
-y_coordname: "latitude"
-lon_coordname: "longitude"
-lat_coordname: "latitude"
-reflectivity_varname: 'REFL_COM'
+x_dimname: lon
+y_dimname: lat
+z_dimname: z
+time_dimname: time
+x_coordname: longitude
+y_coordname: latitude
+lon_coordname: longitude
+lat_coordname: latitude
+reflectivity_varname: REFL_COM
 # Input data source: No longer needed!
-# input_source: 'wrf_composite'
+# input_source: wrf_composite
 
 # Specify data structure
 datatimeresolution: 0.25     # hour
 pixel_radius: 4.0      # km
-time_dimname: 'time'
-ref_varname: 'dbz_comp'
+ref_varname: dbz_comp
 
 # Tracking parameters
 timegap: 0.5           # hour
@@ -166,17 +166,17 @@ trackstats_dense_netcdf: 1
 match_pixel_dt_thresh: 60.0  # seconds
 
 # Define tracked feature variable names
-feature_varname: 'feature_number'
-nfeature_varname: 'nfeatures'
-featuresize_varname: 'npix_feature'
+feature_varname: feature_number
+nfeature_varname: nfeatures
+featuresize_varname: npix_feature
 
 # Track statistics output file dimension names
-tracks_dimname: 'tracks'
-times_dimname: 'times'
+tracks_dimname: tracks
+times_dimname: times
 fillval: -9999
-pixeltracking_filebase: 'celltracks_'
+pixeltracking_filebase: celltracks_
 
 # List of variable names to pass from input to tracking output data
 pass_varname:
-  - 'tb'
-  - 'rainrate'
+  - tb
+  - rainrate
